fix(Accordion): prevent tertiary button from stretching when expanded (#8384)

--- a/packages/dnb-eufemia/src/components/accordion/style/dnb-accordion.scss
+++ b/packages/dnb-eufemia/src/components/accordion/style/dnb-accordion.scss
@@ -514,4 +514,7 @@
     background: none;
     box-shadow: none;
   }
+  &__tertiary-button {
+    align-self: flex-start;
+  }
 }
